Fixed website on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,10 @@ textarea,
 select {
   font: inherit;
 }
+
+html {
+  scroll-behavior: smooth;
+}
 /* /===================================CUSTOM CLASSES FROM ANIMISTA===================================/ */
 .slide-in-blurred-left {
   -webkit-animation: slide-in-blurred-left 2s cubic-bezier(0.23, 1, 0.32, 1)
